Remove unsupported jvm params